# starlette-admin

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docs.yml  preview-docs.yml  publish.yml  test.yml
advanced/base-model-view/: index.html
advanced/custom-field/: index.html
alternatives/: index.html
api/actions/: index.html
api/auth/: index.html
api/auth-provider/: index.html
api/base-admin/: index.html
api/fields/: index.html
api/views/: index.html
changelog/: index.html
deployment/: index.html
docs/: alternatives.md  changelog.md  index.es.md  index.md  index.tr.md
docs/advanced/: base-model-view.md  custom-field.md
docs/advanced/base-model-view/: index.md  index.tr.md
docs/advanced/custom-field/: index.es.md  index.md  index.tr.md
docs/alternatives/: index.es.md  index.md  index.tr.md
docs/api/: auth-provider.md  base-admin.md  fields.md  views.md
docs/api/actions/: index.md
docs/api/auth/: index.md
docs/api/auth-provider/: index.md
docs/api/base-admin/: index.md
docs/api/fields/: index.es.md  index.md
docs/api/views/: index.md
docs/changelog/: index.md
docs/deployment/: index.md  index.tr.md
docs/stylesheets/: extra.css
docs/tutorial/: authentication.md  files.md  getting-started.md  multiple-admin.md  validations.md
docs/tutorial/actions/: index.md  (+1 more)
docs/tutorials/: index.md
docs_src/advanced/: custom_field.py  custom_model_view.py
docs_src/index/: mongoengine_model.py  sqla_model.py
docs_src/tutorial/: auth.py  multiple_admin.py
es/: index.html
es/alternatives/: index.html
es/changelog/: index.html
es/deployment/: index.html
es/tutorials/: index.html
examples/: test.py
examples/auth/: README.md  app.py  config.py  model.py  provider.py  requirements.txt  seed.py  view.py
examples/authlib/: README.md  app.py  config.py  provider.py  requirements.txt
examples/babel/: README.md  app.py  requirements.txt
examples/basic/: README.md  app.py  requirements.txt
examples/beanie/: README.md  app.py  dependencies.py  models.py  requirements.txt
examples/beanie_basic/: README.md  app_fastapi.py  models.py
examples/beanie_custom/: README.md  app_fastapi.py  models.py
examples/beanie_has_many/: README.md  app_fastapi.py  config.py  models.py
examples/beanie_has_one/: README.md  app_fastapi.py  models.py  requirements.txt
examples/beanie_image/: README.md  app_fastapi.py  models.py  requirements.txt
examples/custom-backend/: README.md  app.py  config.py  db.json  models.py  requirements.txt  view.py
examples/custom_actions/: README.md  __init__.py  app.py  config.py  models.py  seed.py
examples/fields/: README.md  app.py
examples/mongoengine/: README.md  app.py  models.py  requirements.txt
examples/odmantic/: README.md  app.py  helpers.py  models.py  requirements.txt  views.py
examples/sqla/: README.md  app.py  config.py  models.py  requirements.txt  views.py
examples/sqla-file/: README.md  requirements.txt  storage.py
examples/sqla-pydantic/: README.md  app.py  models.py  requirements.txt  schemas.py  views.py
examples/sqla_files/: README.md  app.py  config.py  models.py  requirements.txt  storage.py
examples/sqla_multiple_pks/: README.md  __init__.py  app.py  config.py  models.py  requirements.txt  seed.py  views.py
examples/sqlmodel/: README.md  app.py  models.py  requirements.txt  views.py
i18n/: admin.pot  init.sh  main.py
scripts/: coverage.sh  format.sh  lint.sh
search/: search_index.json
starlette_admin/: __init__.py  _types.py  actions.py  auth.py  base.py  converters.py  exceptions.py  expose.py  fields.py  helpers.py  i18n.py  views.py
starlette_admin/templates/: action.html  actions.html  base.html  create.html  detail.html  edit.html  error.html  layout.html  list.html  login.html  row-actions.html
starlette_admin/tools/: iter.py
stylesheets/: extra.css
tests/: auth_provider.py  dummy_model_view.py  test_actions.py  test_admin_basic.py  test_auth.py  test_base_model_view.py  test_collection_field.py  test_converters.py  test_custom_actions.py  test_enum_field.py  test_formatted_field.py  test_i18n.py  test_list_field.py  test_multiple_admin.py  test_timedelta.py  test_views.py
tests/beanie/: __init__.py  conftest.py  test_custom.py  test_doc.py  test_email.py  test_gfs_file.py  test_gfs_image.py  test_helpers.py  test_link.py  test_my_json.py  test_password.py  test_password_field.py  test_relations.py  test_slug.py  test_telephone.py  test_view.py  test_view_meta.py
tests/data/: posts.json  products.json
tests/mongoengine/: __init__.py  test_auth.py  test_basic.py  test_embedded_document.py  test_view.py  test_view_meta.py
tests/odmantic/: __init__.py  conftest.py  test_async_engine.py  test_auth.py  test_basic_async.py  test_basic_sync.py  test_sync_engine.py  test_view_meta.py
tests/sqla/: conftest.py  test_actions.py  test_async_engine.py  test_auth.py  test_basic.py  test_basic_async.py  test_basic_sync.py  test_fk_filter.py  test_multiple_pks.py  test_sqla_and_pydantic.py  test_sqla_utils.py  test_sqlmodel.py  test_sqlmodel_custom_fk.py  test_sqlmodel_manytomany.py  test_sync_engine.py  test_view_meta.py  test_view_serialization.py  utils.py
tests/templates/: custom_index.html  report.html
tests/tools/: test_iter.py
tutorial/actions/: index.html
tutorial/authentication/: index.html
tutorial/batch-actions/: index.html
tutorial/files/: index.html
tutorial/getting-started/: index.html
tutorial/multiple-admin/: index.html
tutorial/validations/: index.html
tutorials/: index.html
tutorials/basic/: index.html
user-guide/actions/: index.html
user-guide/authentication/: index.html
user-guide/files/: index.html
user-guide/getting-started/: index.html
user-guide/multiple-admin/: index.html
user-guide/validations/: index.html
(+237 files in other folders)
